--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Program Files/Android/android-sdk-windows/platforms/android-9/android.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Android/android-sdk-windows/add-ons/addon-google_apis-google-8/libs/maps.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Android/android-sdk/platforms/android-9/android.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/Program Files (x86)/Android/android-sdk/docs/reference"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Android/android-sdk/add-ons/addon_google_apis_google_inc_8/libs/maps.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
